# OpenGL-CFD

./: .gitignore  CMakeLists.txt  DESIGN.md  README.md  imgui.ini
src/: Application.cpp  Application.h  FluidSolver.cpp  FluidSolver.h  Renderer.cpp  Renderer.h  Shader.h  main.cpp
src/Geometry/: Mesh.cpp  Mesh.h  SceneImporter.cpp  SceneImporter.h  Slicer.cpp  Slicer.h
src/Shaders/: fluid.frag  fluid.vert  mesh.frag  mesh.vert  slicer.frag  slicer.vert
